--- a/index.html
+++ b/index.html
@@ -115,18 +115,26 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item outline">
-                                <a href="https://github.com/awreese/GraphADT">
-                                    <img class="img-portfolio img-responsive" src="img/graph.png">
+                                <a href="https://fiverscan.com">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.png">
                                 </a>
-                                <p class="portfolio-text">Re-implementation of a GraphADT from a class project.  I more or less tried to improve upon what I felt could have been implemented better had I not had an academic deadline.</p>
+                                <p class="portfolio-text">LuckSlot is a slot game that pays real money. It is a brand new horizon in the world of Vegas Slot Machines. Try one of the best casino games for FREE.</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item outline">
-                                <a href="https://courses.cs.washington.edu/courses/cse481v/16sp/home.php?mode=off">
-                                    <img class="img-portfolio img-responsive" src="img/hololens.png">
+                                <a href="https://fiverscan.com">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.png">
                                 </a>
-                                <p class="portfolio-text">Teaching assistant for the very first Virtual/Augmented Reality Capstone course offered at UW.  I designed and maintained the course website.  <a href="https://courses.cs.washington.edu/courses/cse481v/16sp/home.php?mode=matrix">Wow Factor!</a></p>
+                                <p class="portfolio-text">Another poker app that lets you play poker online with your friends is FC Poker. This software is free, with an in-app purchase upgrade that allows more players at the table and customized blind levels.</a></p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item outline">
+                                <a href="https://github.com/ottomayer313/">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                                </a>
+                                <p class="portfolio-text">Service traveling course system using MERN Stack</p>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -135,6 +143,14 @@
                                     <img class="img-portfolio img-responsive" src="img/pexels-photo-90807.jpg">
                                 </a>
                                 <p class="portfolio-text">My personal project for implementing more complex structures than those currently provided by the Java Collection framework.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item outline">
+                                <a href="https://github.com/awreese/GraphADT">
+                                    <img class="img-portfolio img-responsive" src="img/graph.png">
+                                </a>
+                                <p class="portfolio-text">Re-implementation of a GraphADT from a class project.  I more or less tried to improve upon what I felt could have been implemented better had I not had an academic deadline.</p>
                             </div>
                         </div>
                         <div class="col-md-6">
