--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
             <div class="intro">
                 <img class="img-portrait" src="img/me.jpg"/>
                 <h1>My name is Otto Mayer</h1>
-                <h3>Phorms Bilingual School &amp; B.Sc, University of Applied Science, Frankfurt am Main</h3>
-                <h3>Senior Full Stack Project Manager @ FiversCan</h3>
-                <h3>I convert coffee and pizza into production code</h3>
+                <h3>Phorms Bilingual School &amp; B.Sc, Frankfurt University of Applied Science, Frankfurt am Main</h3>
+                <h3>Senior Full Stack Developer / Blockchain Architect @ FiversCan</h3>
+                <h3>I write codes with coffee and pizza</h3>
                 <br>
                 <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
             </div>
