--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="intro">
                 <img class="img-portrait" src="img/me.jpg"/>
                 <h1>My name is Otto Mayer</h1>
-                <h3>Phorms Bilingual School &amp; B.Sc, Frankfurt University of Applied Science, Frankfurt am Main</h3>
+                <h3>Phorms Bilingual School &amp; Frankfurt University of Applied Science, Frankfurt am Main</h3>
                 <h3>Senior Full Stack Developer / Blockchain Architect @ FiversCan</h3>
                 <h3>I write codes with coffee and pizza</h3>
                 <br>
