--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <img class="img-portrait" src="img/me.jpg"/>
                 <h1>My name is Otto Mayer</h1>
                 <h3>Phorms Bilingual School, Frankfurt am Main &amp; Frankfurt University of Applied Science</h3>
-                <h3>Senior Full Stack / Blockchain Developer @ FiversCan</h3>
+                <h3>Senior Full Stack Developer @ FiversCan</h3>
                 <h3>I write codes with coffee and pizza</h3>
                 <br>
                 <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
